# galileoQC

./: .buildinfo  .gitignore  AirGravQC Docs.xmind  AirGravQC Todo List.md  AirGravQC presentation agenda.numbers  AirGravQC_GAseminar_07Jun2023.key  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  MANIFEST.in  Play_pdoc.ipynb  README.md  about.html  deed.html  genindex.html  geowhizz.html  grid_psd development.ipynb  index.html  install_details.html  license.html  lineNumbering.html  moduleTests.ipynb  modules.html  objects.inv  publicREADME.md  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  sphinx-reading-durations.json  starting.html
.doctrees/: about.doctree  deed.doctree  environment.pickle  geowhizz.doctree  index.doctree  install_details.doctree  license.doctree  lineNumbering.doctree  modules.doctree  starting.doctree
.doctrees/apidocs/: index.doctree
.doctrees/tutorials/: CheckRepeats_Analysis.doctree  Compare_Gravity.doctree  Craig_transform.doctree  FTG_Noise_Analysis.doctree  Falcon_Noise_Analysis.doctree  Gravimeter_Corrections.doctree  Grid_Imaging.doctree  Intersection_Analysis.doctree  Navigation_and_Position.doctree  Odd_Even_Analysis.doctree  Prepare_2012KauringData.doctree  Prepare_AeromagData.doctree  Prepare_EastVicData.doctree  Prepare_VintonDomeData.doctree  Statistical_Analysis.doctree  aeromag_analysis.doctree  tutorials.doctree
.github/workflows/: documentation.yml  pypi-publish.yml
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
AirGravQC/: RequiredPythonPackages  __init__.py  colors.py  config.py  graphics.py  gridfiles.py  plotLinesOnGroundStns.py  pointfiles.py  qualityAnalysis.py  whizzPlot.py
AirGravQC/aseg_gdf2/: gdf2.py
AirGravQC/gridFiles/: checkTCratio.py  diff_n_image.py  display_grid.py  graphics.py  graphicsShaded.py  gridToNc4.py  grid_n_image.py  gridfiles.py  grids_gmt.py  gridtoERS.py  gridutility.py  imageAllInDir.py  imageStats.py  oddeven.py  read_ers.py  traceImages.py  whizz_to_xarray.py  xarray_to_grid.py  xdImage.py
AirGravQC/qc/: __init__.py  allChanStats.py  checkAtmosEffect.py  checkBasemag.py  checkClearance.py  checkConstantSlope.py  checkDiffStats.py  checkDiurnal.py  checkEotvosCorr.py  checkErsHeaders.py  checkFreeAirCorr.py  (+31 more)
_sources/: deed.md.txt  geowhizz.md.txt  index.md.txt  install_details.md.txt  lineNumbering.md.txt  modules.md.txt
apidocs/: index.html
examples/: Test_AirGravQC_griddata.ipynb  Test_AirGravQC_mag_gdf.ipynb  Test_updateTravs.ipynb
galileoQC/: __init__.py  config.py
pegasusQC/: __init__.py  colors.py  config.py
src/: __init__.py  config.py  general_graphics.py  graphics.py  gridfiles.py  not_used.py  pointfiles.py  qc_agg.py  qc_ftg.py  qc_gravimetry.py  qc_mag.py  qc_nav.py  qualityAnalysis.py  whizzPlot.py
tutorials/: CheckRepeats_Analysis.html  Compare_Gravity.html  Craig_transform.html  FTG_Noise_Analysis.html  Falcon_Noise_Analysis.html  Gravimeter_Corrections.html  Grid_Imaging.html  Intersection_Analysis.html  Navigation_and_Position.html  Odd_Even_Analysis.html  Prepare_2012KauringData.html  Prepare_AeromagData.html  Prepare_EastVicData.html  Prepare_VintonDomeData.html  Statistical_Analysis.html  aeromag_analysis.html  tutorials.html
(+761 files in other folders)
