[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "AirGravQC"
version = "0.0.1"
authors = [
  { name="Mark Helm Dransfield", email="dransfield.m@bigpond.com" },
]
description = "Quality control for airborne gravimetry and gravity gradiometry in a Python package."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

