[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "galileoQC"
version = "0.0.5"
authors = [
  { name="Mark Helm Dransfield", email="dransfield.m@bigpond.com" },
]
maintainers = [
  { name="Mark Helm Dransfield", email="dransfield.m@bigpond.com" },
]
description = "Quality control for airborne gravimetry and gravity gradiometry in Python."
readme = "README.md"
requires-python = ">=3.7"

license = "CC-BY-SA-4.0"

dependencies = ["aseg-gdf2==0.7", "colorcet", "filebrowser", "h5py", "ipympl", 
"matplotlib", "netCDF4", "numba", "numpy", "pathlib", "pooch", 'pyarrow', "pyproj", 
"rioxarray", "scikit-image", "scipy", "verde", "xarray", "xrft"]

# Classifiers have set values - be sure to only use classifier values from the
# PyPI page here: https://PyPI.org/classifiers/
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 5 - Production/Stable",

    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

# Can add urls for home page, documentation, issue tracker and source code 
[project.urls]
"GitHub" = "https://github.com/GeoscienceAustralia/galileoQC"
